--- a/ApiChallenge/ApiChallenge/Properties/launchSettings.json
+++ b/ApiChallenge/ApiChallenge/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "ApiChallenge": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7084;http://localhost:5130",
       "environmentVariables": {
